--- a/pythonExam2018-1/exam/source_code/Helloworld.ipynb
+++ b/pythonExam2018-1/exam/source_code/Helloworld.ipynb
@@ -1,18 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello WOrld\n"
-     ]
-    }
-   ],
    "source": [
     "s1 = \"Hello\"\n",
     "s2 = \"WOrld\"\n",
@@ -21,19 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Helloworld.ipynb\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%ls"
+    "s1?"
    ]
   },
   {
@@ -54,6 +36,52 @@
    ],
    "source": [
     "%whos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Helloworld.ipynb\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/youngkwangkim/git/pythonExa-2018-1/pythonExam2018-1/exam/source_code'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
    ]
   },
   {
