--- a/pythonExam2018-1/exam/source_code/Helloworld.ipynb
+++ b/pythonExam2018-1/exam/source_code/Helloworld.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello WOrld\n"
+     ]
+    }
+   ],
    "source": [
     "s1 = \"Hello\"\n",
     "s2 = \"WOrld\"\n",
@@ -11,26 +21,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s1?"
+    "s1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variable   Type    Data/Info\n",
-      "----------------------------\n",
-      "s1         str     Hello\n",
-      "s2         str     WOrld\n"
+      "Variable   Type    Data/Info\n----------------------------\ns1         str     Hello\ns2         str     WOrld\n"
      ]
     }
    ],
@@ -40,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Helloworld.ipynb\r\n"
+      "Helloworld.ipynb  exam01.py\r\n"
      ]
     }
    ],
