--- a/pythonExam2018-1/exam/source_code/TopBoxOfficeMovieCrawler.ipynb
+++ b/pythonExam2018-1/exam/source_code/TopBoxOfficeMovieCrawler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -10,12 +10,13 @@
    "source": [
     "from urllib.request import urlopen\n",
     "from bs4 import BeautifulSoup\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -33,16 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['\\n        The First Purge\\n    ', '\\n        Skyscraper\\n    ', '\\n        Jurassic World: Fallen Kingdom\\n    ', '\\n        Incredibles 2\\n    ', '\\n        Ant-Man and the Wasp\\n    ', '\\n        Teen Titans Go! To the Movies\\n    ', '\\n        Hotel Transylvania 3: Summer Vacation\\n    ', '\\n        Equalizer 2\\n    ', '\\n        Mamma Mia! Here We Go Again\\n    ', '\\n        Mission: Impossible - Fallout\\n    ']\n"
+      "\n        Mission: Impossible - Fallout\n    \n\n        Mamma Mia! Here We Go Again\n    \n\n        Equalizer 2\n    \n\n        Hotel Transylvania 3: Summer Vacation\n    \n\n        Teen Titans Go! To the Movies\n    \n\n        Ant-Man and the Wasp\n    \n\n        Incredibles 2\n    \n\n        Jurassic World: Fallen Kingdom\n    \n\n        Skyscraper\n    \n\n        The First Purge\n    \n"
      ]
     }
    ],
@@ -64,18 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    ""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -237,7 +238,7 @@
        "</div>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,9 +250,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TITLE</th>\n",
+       "      <th>URL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>\\n        Mamma Mia! Here We Go Again\\n</td>\n",
+       "      <td>https://www.rottentomatoes.com/m/incredibles_2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TITLE</th>\n",
+       "      <th>URL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>\\n        Mamma Mia! Here We Go Again\\n</td>\n",
+       "      <td>https://www.rottentomatoes.com/m/incredibles_2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ""
    ]
@@ -261,7 +368,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
