--- a/pythonExam2018-1/exam/source_code/TopBoxOfficeMovieCrawler.ipynb
+++ b/pythonExam2018-1/exam/source_code/TopBoxOfficeMovieCrawler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -99,48 +99,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>\\n        The First Purge\\n</td>\n",
-       "      <td>https://www.rottentomatoes.com/m/the_first_purge</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>\\n        Skyscraper\\n</td>\n",
-       "      <td>https://www.rottentomatoes.com/m/skyscraper_2018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>\\n        Jurassic World: Fallen Kingdom\\n</td>\n",
-       "      <td>https://www.rottentomatoes.com/m/jurassic_worl...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>\\n        Incredibles 2\\n</td>\n",
-       "      <td>https://www.rottentomatoes.com/m/incredibles_2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>\\n        Ant-Man and the Wasp\\n</td>\n",
-       "      <td>https://www.rottentomatoes.com/m/ant_man_and_t...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
        "      <td>\\n        Teen Titans Go! To the Movies\\n</td>\n",
        "      <td>https://www.rottentomatoes.com/m/teen_titans_g...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>1</th>\n",
+       "      <td>\\n        Incredibles 2\\n</td>\n",
+       "      <td>https://www.rottentomatoes.com/m/incredibles_2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>\\n        The Darkest Minds\\n</td>\n",
+       "      <td>https://www.rottentomatoes.com/m/the_darkest_m...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>\\n        Ant-Man and the Wasp\\n</td>\n",
+       "      <td>https://www.rottentomatoes.com/m/ant_man_and_t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>\\n        Hotel Transylvania 3: Summer Vacatio...</td>\n",
        "      <td>https://www.rottentomatoes.com/m/hotel_transyl...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>5</th>\n",
        "      <td>\\n        Equalizer 2\\n</td>\n",
        "      <td>https://www.rottentomatoes.com/m/equalizer_2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>6</th>\n",
        "      <td>\\n        Mamma Mia! Here We Go Again\\n</td>\n",
        "      <td>https://www.rottentomatoes.com/m/mamma_mia_her...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>\\n        The Spy Who Dumped Me\\n</td>\n",
+       "      <td>https://www.rottentomatoes.com/m/the_spy_who_d...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>\\n        Christopher Robin\\n</td>\n",
+       "      <td>https://www.rottentomatoes.com/m/christopher_r...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -177,48 +177,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>\\n        The First Purge\\n</td>\n",
-       "      <td>https://www.rottentomatoes.com/m/the_first_purge</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>\\n        Skyscraper\\n</td>\n",
-       "      <td>https://www.rottentomatoes.com/m/skyscraper_2018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>\\n        Jurassic World: Fallen Kingdom\\n</td>\n",
-       "      <td>https://www.rottentomatoes.com/m/jurassic_worl...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>\\n        Incredibles 2\\n</td>\n",
-       "      <td>https://www.rottentomatoes.com/m/incredibles_2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>\\n        Ant-Man and the Wasp\\n</td>\n",
-       "      <td>https://www.rottentomatoes.com/m/ant_man_and_t...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
        "      <td>\\n        Teen Titans Go! To the Movies\\n</td>\n",
        "      <td>https://www.rottentomatoes.com/m/teen_titans_g...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>1</th>\n",
+       "      <td>\\n        Incredibles 2\\n</td>\n",
+       "      <td>https://www.rottentomatoes.com/m/incredibles_2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>\\n        The Darkest Minds\\n</td>\n",
+       "      <td>https://www.rottentomatoes.com/m/the_darkest_m...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>\\n        Ant-Man and the Wasp\\n</td>\n",
+       "      <td>https://www.rottentomatoes.com/m/ant_man_and_t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>\\n        Hotel Transylvania 3: Summer Vacatio...</td>\n",
        "      <td>https://www.rottentomatoes.com/m/hotel_transyl...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>5</th>\n",
        "      <td>\\n        Equalizer 2\\n</td>\n",
        "      <td>https://www.rottentomatoes.com/m/equalizer_2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>6</th>\n",
        "      <td>\\n        Mamma Mia! Here We Go Again\\n</td>\n",
        "      <td>https://www.rottentomatoes.com/m/mamma_mia_her...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>\\n        The Spy Who Dumped Me\\n</td>\n",
+       "      <td>https://www.rottentomatoes.com/m/the_spy_who_d...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>\\n        Christopher Robin\\n</td>\n",
+       "      <td>https://www.rottentomatoes.com/m/christopher_r...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -230,7 +230,7 @@
        "</div>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
